--- a/index.html/gallery.html
+++ b/index.html/gallery.html
@@ -74,7 +74,7 @@
      </section>
      <section id="side_contact">
          <h2>お問い合わせ</h2>
-         <address><img src="imagesmartphone.png" alt="TEL">055-555-555</address>
+         <address><img src="imagesmartphone.png" alt="TEL"></address>
          <p>受付時間 9:00～18:00</p>
          <p><a href="https://forms.gle/ZoZ64CVibtWzrDVj8" target="_blank" class="contact_button">お問い合わせフォーム</a></p>
      </section>
